--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,12 @@ body{
 
 }
 
+#skills-app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (min-width: 760px){
   #header-app{
     padding: 0 10px 0 10px;
