--- a/src/Components/Modals/modals.css
+++ b/src/Components/Modals/modals.css
@@ -17,4 +17,27 @@
     background-color: rgb(90, 87, 87);
     width: 60%;
     padding: 20px;
+    max-width: 500px;
+}
+
+.modal-header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-header button{
+ 
+    background-color: rgb(90, 87, 87);
+    background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23fff' d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3E%3C/svg%3E") ;
+    border: 0;
+    border-radius: .375rem;
+    box-sizing: initial;
+    height: 1em;
+    opacity: var(--bs-btn-close-opacity);
+    padding: .25em;
+    width: 1em;
+    cursor: pointer;
+
+
 }
