--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,12 @@ body{
   background-size: cover;
 }
 
+#education-app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
 
 @media (min-width: 760px){
   #header-app{
@@ -72,8 +78,25 @@ body{
     width: 80%;
     justify-self: center;
     justify-content: flex-start;
-    max-width: 1000px;
+    max-width: 1350px;
   }
 
 
+}
+
+@media (min-width: 1200px){
+  .subtittle{
+    
+    width: 80%;
+    
+  }
+
+  #aboutme-app{
+   margin: 0 0 80px 0; 
+  }
+
+  #skills-app{
+    padding: 20px 0 80px 0;
+    
+  }
 }
