--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: linear-gradient(to right, rgba(33, 33, 33, 1), rgba(104, 104, 104, 0.5),rgba(33, 33, 33, 1));
 }
 
 .separador{
@@ -92,7 +93,7 @@ body{
   }
 
   #aboutme-app{
-   margin: 0 0 80px 0; 
+   padding: 0 0 80px 0; 
   }
 
   #skills-app{
