--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -1,14 +1,35 @@
 #card-body{
     border: solid 1px white;
-    width: 90%;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     padding: 25px;
+    margin-top: 10px 0 0 0;
+    background: linear-gradient(to right, #1f1b1b, #6b776b);
+    box-shadow: 0 5px 10px #3f3e3e;
+    border-radius: 5px;
 }
+    
 #card-body img{
     width: 35%;
     height: 75%;
     max-width: 120px;
+}
+
+#card-body div h2{
+    font-size: 1.7rem;    
+    margin: 5px 0 6px 0;
+    width: 100%;
+}
+#card-body div h4{
+    font-size: 1.2rem; 
+    margin: 5px 0 6px 0;
+    width: 100%;
+}
+#card-body div h6{
+    font-size: 0.8rem; 
+    margin: 5px 0 6px 0;
+    width: 100%;
 }
 
 
@@ -18,7 +39,7 @@
 #card-body{
     border: solid 1px white;
     width: 350px;
-    height: 125px;
+    height: 210px;
     display: flex;
     justify-content: space-between;
     padding: 25px;
@@ -31,6 +52,7 @@
 }
 
 #card-body div h2{
+    
     margin: 5px 0 6px 0;
     width: 100%;
 }
@@ -50,13 +72,22 @@
     #card-body{
         border: solid 1px white;
         width: 390px;
-        height: 180px;
+        height: 225px;
         display: flex;
         justify-content: space-between;
         padding: 25px;
     }
 
+    #card-body img{
+        width: 35%;
+        height: 50%;
+        max-width: 120px;
+    }
 
+    #card-body div{
+        width: 100%;
+    }
+    
 }
 
 
