--- a/src/Components/Education/education.css
+++ b/src/Components/Education/education.css
@@ -2,6 +2,15 @@
     display: grid;
     grid-template-columns: auto;
     gap: 25px;
+    place-items: center;
+    
+}
+
+#education-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
 
@@ -9,6 +18,7 @@
     #cartas-educacion{
         grid-template-columns: auto auto;
         gap: 25px;
+        margin: 40px 0;
     }
 }
 
