--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -14,8 +14,8 @@
 
 .icons{
     display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 15px;
+    grid-template-columns: auto auto;
+    gap: 20px;
     place-items: center;
     margin: 10px 0 20px 0;
     
