--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body{
   flex-direction: column;
   align-items: center;
   background: linear-gradient(to right, rgba(33, 33, 33, 1), rgba(104, 104, 104, 0.5),rgba(33, 33, 33, 1));
+  padding: 20px 0;
 }
 
 .separador{
@@ -49,12 +50,14 @@ body{
   linear-gradient(rgba(33,33,33,0.9), rgba(33,33,33,0.5)),
   url("./../public/—Pngtree—technology background binary computer code_1264149.png"); 
   background-size: cover;
+  padding: 20px 0;
 }
 
 #education-app{
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px 0;
 
 }
 
@@ -71,9 +74,6 @@ body{
     max-width: 830px;
   }
 
-}
-
-@media (min-width: 760px){
   .subtittle{
     margin: 25px 0 0 0;
     width: 80%;
@@ -81,9 +81,8 @@ body{
     justify-content: flex-start;
     max-width: 1350px;
   }
-
-
 }
+
 
 @media (min-width: 1200px){
   .subtittle{
@@ -99,5 +98,12 @@ body{
   #skills-app{
     padding: 20px 0 80px 0;
     
+  }
+}
+
+
+@media (min-width: 1500px){
+  #education-app{
+    width: 100%;
   }
 }
