--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -49,6 +49,7 @@
     width: 35%;
     height: 75%;
     max-width: 120px;
+    max-height: 120px;
 }
 
 #card-body div h2{
@@ -65,6 +66,11 @@
     margin: 0 0 2px 0;
     width: 100%;
 }
+#contenedor2-Educationbody{
+    max-width: 348px;
+    
+}
+
 
 }
     
