--- a/src/Components/Education/education.css
+++ b/src/Components/Education/education.css
@@ -7,9 +7,23 @@
 }
 
 #education-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto;
+    place-items: center;
+    
+}
+
+#contenedor1-Educationbody{
+    display: grid;
+    place-items: center;
+    width: 100%;
+    
+}
+
+#contenedor2-Educationbody{
+    display: grid;
+    place-items: center;
+    width: 100%;
     
 }
 
@@ -20,6 +34,10 @@
         gap: 25px;
         margin: 40px 0;
     }
+    #contenedor2-Educationbody{
+        max-width: 100%;
+        
+    }
 }
 
 @media (min-width: 1500px){
@@ -29,8 +47,17 @@
     }
     
     #cartas-educacion{
-        grid-template-columns: auto auto auto auto;
-        gap: 10px;
+        grid-template-columns: auto auto;
+        gap: 35px;
+    }
+    #education-body{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 90%;
+        /* place-items: center; */
+        
     }
 
 }
