--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,14 @@ body{
   align-items: center;
   padding: 20px 0;
 
+
+}
+
+#proyects-app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
 }
 
 @media (min-width: 760px){
