--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -11,6 +11,7 @@
 }
     
 #card-body img{
+    display: none;
     width: 35%;
     height: 75%;
     max-width: 120px;
@@ -30,6 +31,12 @@
     font-size: 0.8rem; 
     margin: 5px 0 6px 0;
     width: 100%;
+}
+
+@media(min-width:360px){
+    #card-body img{
+        display: block;
+         ´}
 }
 
 
