--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -12,7 +12,7 @@
     
 #card-body img{
     display: none;
-    width: 35%;
+    width: 28%;
     height: 75%;
     max-width: 120px;
 }
@@ -36,7 +36,7 @@
 @media(min-width:360px){
     #card-body img{
         display: block;
-         ´}
+         }
 }
 
 
@@ -53,8 +53,8 @@
 }
 
 #card-body img{
-    width: 35%;
-    height: 75%;
+    width: 25%;
+    height: 50%;
     max-width: 120px;
     max-height: 120px;
 }
