--- a/src/Components/CardProyects/CardProyects.css
+++ b/src/Components/CardProyects/CardProyects.css
@@ -6,7 +6,7 @@
     box-shadow: 1px 2px 0px rgb(65, 63, 63);
 }
 
-.btn{
+.card-body .btn{
     width: 100%;
     max-width: 110px;
     background-color: #686b68;
@@ -14,12 +14,23 @@
     --bs-btn-border-color: #a2a5a2;
 }
 
-.btn:hover {
+.card-body.btn:hover {
     background-color: #a2a5a2;
     box-shadow: 0 0 2px #a2a5a2;
     border-color: #a2a5a2;
     --bs-btn-border-color: #a2a5a2;
 
+}
+.btn-primary {
+
+    --bs-btn-bg: #2c2d30; 
+    --bs-btn-border-color: #2c2d30;
+    --bs-btn-disabled-bg: #2c2d30;
+    --bs-btn-disabled-border-color: #2c2d30;
+    --bs-btn-active-bg: #2c2d30; 
+    --bs-btn-active-border-color: #2c2d30;
+    --bs-btn-hover-bg: #2c2d30; 
+    --bs-btn-hover-border-color: #2c2d30;
 }
 
 @media(min-width: 350px){
