--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -13,31 +13,63 @@
         margin: 20px 0 0 0;
     }
 
-    #navbar-body ul{
+    #navbar-body ul, #navbar-fixed ul{
         width: 100%;
         display: flex;
         list-style: none;
         justify-content: space-around;
     }
     
-    #navbar-body ul li a{
+    #navbar-body ul a {
 
     font-size: 20px;
     text-decoration: none;
     color: white;
+    padding: 10px 0 0 0;
+    
     
     }
 
 
-    #navbar-body ul li{
+    #navbar-body ul a li{
         padding: 5px;
         border-radius: 5px;
         transition: transform 0.2s ease-in-out;
     }
     
-    #navbar-body ul li:hover{
+    #navbar-body ul li:hover {
         transform: scale(1.1);
         background-color:  rgb(255, 251, 251, 0.1);
+    } 
+
+    #navbar-fixed{
+        z-index: 5;
+        display: flex;
+        width: 100%;
+        align-self: center;
+        background-color: rgba(33,33,33,0.4);
+        margin: 20px 0 0 0;
+
+    }
+    #navbar-fixed ul a{
+        font-size: 20px;
+        text-decoration: none;
+        color: rgba(225, 225, 225, 0.7);
+        padding: 10px 0 0 0;
+    
+
+    }
+    #navbar-fixed ul a li{
+        padding: 5px;
+        border-radius: 5px;
+        transition: transform 0.2s ease-in-out;
+    }
+
+    #navbar-fixed ul li:hover{
+        transform: scale(1.1);
+        background-color:  rgb(151, 151, 151);
+        color: rgb(33, 33, 33);
+
     } 
     
 }
