--- a/src/App.css
+++ b/src/App.css
@@ -62,11 +62,22 @@ body{
 
 }
 
+#navbar-fixed{
+  display: none;}
+
 #proyects-app{
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px 0;
+}
+
+@media(max-height: 400px){
+  #navbar-fixed{
+    height: 15%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media (min-width: 760px){
