--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -2,6 +2,21 @@
     display: none;
 }
 
+@media((min-width: 760px) and (max-height: 400px)){
+    #navbar-fixed{
+      height: 15%;
+      display: flex;
+      align-items: center;
+    }
+
+    #navbar-fixed ul a li{
+        font-size: 1rem;
+        text-decoration: none;
+        color: rgba(225, 225, 225, 0.7);
+        padding: 0
+    
+    } 
+  }
 
 @media (min-width: 760px){
 
