--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ body{
 
 @media(max-height: 400px){
   #navbar-fixed{
+    display: "none";
     height: 15%;
     display: flex;
     align-items: center;
