--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -9,11 +9,14 @@
       align-items: center;
     }
 
-    #navbar-fixed ul a li{
-        font-size: 1rem;
+    #navbar-fixed ul a{
         text-decoration: none;
         color: rgba(225, 225, 225, 0.7);
         padding: 0
+    
+    } 
+    #navbar-fixed ul a li{
+        font-size: 0.8rem
     
     } 
   }
