--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,10 @@ footer div{
   flex-direction: column;
   align-items: center;
 }
+footer div h6{
+  font-size: 85%;
+  text-align: center;
+}
 
 @media(max-height: 400px){
   #navbar-fixed{
@@ -131,6 +135,11 @@ footer div{
 
   margin: 0;
 
+}
+
+footer div h6{
+  font-size: 100%;
+  text-align: center;
 }
 
 }
