--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -10,7 +10,8 @@
 
 
 #icons-contact ul {
-
+    display: flex;
+    justify-content: space-around;
     list-style: none;
     margin: 25px;
     padding: 0;
@@ -43,7 +44,13 @@
 
     #icons-contact ul{
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
+    }
+
+    #icons-contact ul a{
+
+        margin: 0 40px;
+        
     }
 
     
