--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -2,24 +2,6 @@
     display: none;
 }
 
-@media((min-width: 760px) and (max-height: 400px)){
-    #navbar-fixed{
-      height: 15%;
-      display: flex;
-      align-items: center;
-    }
-
-    #navbar-fixed ul a{
-        text-decoration: none;
-        color: rgba(225, 225, 225, 0.7);
-        padding: 0
-    
-    } 
-    #navbar-fixed ul a li{
-        font-size: 0.8rem
-    
-    } 
-  }
 
 @media (min-width: 760px){
 
@@ -80,17 +62,38 @@
     #navbar-fixed ul a li{
         padding: 5px;
         border-radius: 5px;
-        transition: transform 0.2s ease-in-out;
+        transition: transform 0.2s ease-out;
     }
 
     #navbar-fixed ul li:hover{
         transform: scale(1.1);
-        background-color:  rgb(151, 151, 151);
-        color: rgb(33, 33, 33);
+        background-color:  rgba(151, 151, 151, 0.2);
+        color: rgba(255, 255, 255, 0.5);
 
     } 
     
+    
 }
+
+@media((max-width: 930px) and (max-height: 430px)){
+    #navbar-fixed{
+      height: 15%;
+      display: flex;
+      align-items: center;
+      
+    }
+
+    #navbar-fixed ul a{
+        text-decoration: none;
+        color: rgba(225, 225, 225, 0.7);
+        padding: 0
+    
+    } 
+    #navbar-fixed ul a li{
+        font-size: 0.9rem
+    
+    } 
+  }
 
 @media (min-width: 1200px){
 
